DISCORD FEEDBACK Users on discord identified three errors. 1. If if spam type the calculator stops working. 2. if a number has more than 10 digits it does wrap in the display. 3. Pressing equals and continuing with the calculation stops the calculator for example 19*3=57+5 would not work
These errors have been fixed and the calculator is now working as
intended. The layout of the calculator has also been changed.

On branch feedback-discord
Changes to be committed:
modified:   css/stylesheet.css
modified:   index.html
modified:   js/script.js

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,11 +25,15 @@ h1 {
   background-color: rgb(33, 158, 188);
 }
 
-.equals {
-  background-color: rgb(255, 183, 3);
+/* Equals button */
+.calculator-row-6 .operator {
+  background-color: rgb(251,133,0);
+  /*background-color: rgb(255, 183, 3);*/
+  height: 108px;
 }
 
-.number { 
+.number,
+.decimal { 
   background-color: rgb(2,48,71);
   color: white;
 }
@@ -39,6 +43,25 @@ h1 {
 }
 
 /* Calculator container */
+.container-bottom-2-rows {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.container-bottom-rows-equals {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.container-equals {
+  height: 112px;
+  padding-right: 1px;
+}
+
 .calculator-container {
   align-items: center;
   display: flex;
@@ -46,26 +69,31 @@ h1 {
   flex-direction: column;
 }
 
-/* Calculator display */
-.calculator-display {
-  align-content: flex-end;
+/* Calculator display box */
+.display-container {
   background-color: white;
   border-radius: 4px;
   border: inset 3px black;
-  display: flex;
   font-family: 'Courier New', Courier, monospace;
   font-size: 2.5em;
-  height: 40px;
+  min-height: 50px;
   justify-content: flex-end;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: right;
+  word-wrap: break-word;
   width: 217px;
+}
+
+.calculator-display {
+  color: gray;
+  font-size: smaller;
 }
 
 /* Calculator rows */
 .calculator-row-1, 
 .calculator-row-2,
-.calculator-row-3,
-.calculator-row-4,
-.calculator-row-5
+.calculator-row-3
 {
   align-items: center;
   background-color: white;
@@ -76,4 +104,28 @@ h1 {
   justify-content: space-evenly;
   padding: 1px;
   width: 215px;
+}
+
+.calculator-row-4, 
+.calculator-row-5
+{
+  align-items: center;
+  background-color: white;
+  border: 0px 1px; 
+  border-style: solid rgba(47,47,47,1);
+  border-radius: 1px;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 1px;
+  width: 160px;
+}
+
+.calculator-row-6 {
+  align-items: center;
+  background-color: white;
+  border: 0px 1px; 
+  border-style: solid rgba(47,47,47,1);
+  border-radius: 1px;
+  display: flex;
+  justify-content: space-evenly;
 }
